# musor2

./: .gitmodules  CMakeLists.txt  autoptr.cpp  autoptr.h  inheritance.cpp  inheritance.h  main.cpp
musor/: Mycontainer.cpp  Mycontainer.h  Point.cpp  Point.h  Stack.cpp  Stack.h  associationt.cpp  associationt.h  calculator.cpp  calculator.h  lambda_t.cpp  lambda_t.h  operator_t.cpp  operator_t.h  shablon.cpp  shablon.h  sort.cpp  sort.h
pattern/: AbstractFactory.cpp  AbstractFactory.h  Builder.cpp  Builder.h  Factory.cpp  Factory.h  Prototype.cpp  Prototype.h  Singleton.cpp  Singleton.h
